src/objects/Relazione_Ghost__c.object
<CustomObject>
    <description>Oggetto di sistema creato per gestire trigger di creazione relazione</description>
    <fields>
        <fullName>Cliente__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Relazioni_Ghost</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Cliente_in_Relazione__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Cliente in Relazione</label>
        <referenceTo>Account</referenceTo>
        <relationshipName>Relazioni_Ghost1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Legame_Cliente__c</fullName>
        <label>Legame Cliente</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>Legami_Parentela</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>Legame_Cliente_in_Relazione__c</fullName>
        <label>Legame Cliente in Relazione</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Legame_Cliente__c</controllingField>
            <restricted>true</restricted>
            <valueSetName>Legami_Parentela</valueSetName>
        </valueSet>
    </fields>
    <label>Relazione</label>
    <nameField>
        <displayFormat>G-{0000}</displayFormat>
        <label>Relazione Ghost Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Relazioni</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>